# sqlalchemy-pytibero

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.e2e.yml  docker-compose.oracle-compat.yml  mkdocs.yml  pyproject.toml
.github/: release.yml
.github/workflows/: ci.yml  create-release.yml  docs.yml  publish-pypi.yml
docker/: e2e.Dockerfile  oracle-compat.Dockerfile
docs/: api-reference.md  connection.md  ddl.md  development.md  dialect-features.md  index.md  limitations.md  llms-full.txt  llms.txt  quickstart.md  reflection.md  types.md
docs/javascripts/: mermaid-init.js
scripts/: generate_llms_full.py
sqlalchemy_pytibero/: __init__.py  aioodbc.py  alembic_impl.py  base.py  compiler.py  dialect.py  types.py
test/: conftest.py  test_aioodbc.py  test_alembic.py  test_base.py  test_compiler.py  test_dialect_offline.py  test_types.py
test/e2e/: test_e2e_dialect.py
test/oracle_compat/: test_oracle_compat.py
